--- a/MAUIAPP/BarHub/AppShell.xaml
+++ b/MAUIAPP/BarHub/AppShell.xaml
@@ -7,12 +7,12 @@
     xmlns:local="clr-namespace:BarHub"
     xmlns:profile="clr-namespace:BarHub.Pages.Profile"
     Shell.FlyoutBehavior="Disabled"
-    Shell.TabBarForegroundColor="{AppThemeBinding Light=Black, Dark=White}"
+    Shell.TabBarForegroundColor="{AppThemeBinding Light=Black,
+                                                  Dark=White}"
     Shell.TabBarUnselectedColor="{DynamicResource Muted}">
 
     <TabBar x:Name="tabbar">
-        <ShellContent
-            ContentTemplate="{DataTemplate profile:ProfilePage}" />
+        <ShellContent ContentTemplate="{DataTemplate profile:ProfilePage}" />
     </TabBar>
 
 </Shell>
