--- a/MAUIAPP/BarHub/App.xaml
+++ b/MAUIAPP/BarHub/App.xaml
@@ -1,9 +1,10 @@
-﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:m="clr-namespace:UraniumUI.Material.Resources;assembly=UraniumUI.Material"
-             xmlns:local="clr-namespace:BarHub"
-             x:Class="BarHub.App">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<Application
+    x:Class="BarHub.App"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:BarHub"
+    xmlns:m="clr-namespace:UraniumUI.Material.Resources;assembly=UraniumUI.Material">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
