--- a/MAUIAPP/BarHub/Pages/GlobalComponents/GoBackComponent.xaml
+++ b/MAUIAPP/BarHub/Pages/GlobalComponents/GoBackComponent.xaml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui"
-             xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
-             x:Class="BarHub.Pages.GlobalComponents.GoBackComponent"
-             x:Name="this">
-    
-    <Border BackgroundColor="Transparent" Padding="10" StrokeThickness="0" VerticalOptions="Center">
-        <Image VerticalOptions="Center" Source="{FontImageSource FontFamily=FASolid,Size=15, Glyph={x:Static fa:Solid.ChevronLeft},Color={DynamicResource Muted}}" />
+<ContentView
+    x:Class="BarHub.Pages.GlobalComponents.GoBackComponent"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+    xmlns:uranium="http://schemas.enisn-projects.io/dotnet/maui/uraniumui"
+    x:Name="this">
+
+    <Border
+        Padding="10"
+        BackgroundColor="Transparent"
+        StrokeThickness="0"
+        VerticalOptions="Center">
+        <Image Source="{FontImageSource FontFamily=FASolid, Size=15, Glyph={x:Static fa:Solid.ChevronLeft}, Color={DynamicResource Muted}}" VerticalOptions="Center" />
     </Border>
 
     <ContentView.GestureRecognizers>
