--- a/MAUIAPP/BarHub/Pages/Login/Login.xaml
+++ b/MAUIAPP/BarHub/Pages/Login/Login.xaml
@@ -1,84 +1,131 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
-             xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
-             xmlns:stringResource="clr-namespace:BarHub.Utils.Translation"
-             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:viewModel="clr-namespace:BarHub.ViewModel.Login"
-             x:Class="BarHub.Pages.Login.Login"
-             x:DataType="viewModel:LoginViewModel"
-             Title="Login">
+<ContentPage
+    x:Class="BarHub.Pages.Login.Login"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+    xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
+    xmlns:stringResource="clr-namespace:BarHub.Utils.Translation"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewModel="clr-namespace:BarHub.ViewModel.Login"
+    Title="Login"
+    x:DataType="viewModel:LoginViewModel">
 
     <ContentPage.Behaviors>
-        <toolkit:StatusBarBehavior 
-    StatusBarColor="{StaticResource Black}" 
-    StatusBarStyle="LightContent" />
+        <toolkit:StatusBarBehavior StatusBarColor="{StaticResource Black}" StatusBarStyle="LightContent" />
     </ContentPage.Behaviors>
-    
-    <Grid RowDefinitions="*,*,*,*,*" VerticalOptions="Fill" HorizontalOptions="Fill">
-        <VerticalStackLayout Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center">
+
+    <Grid
+        HorizontalOptions="Fill"
+        RowDefinitions="*,*,*,*,*"
+        VerticalOptions="Fill">
+        <VerticalStackLayout
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            VerticalOptions="Center">
             <VerticalStackLayout HorizontalOptions="Center">
-                <Image Source="app_icon.png" WidthRequest="150" HorizontalOptions="Center" VerticalOptions="Center"/>
-                <Label Text="{stringResource:Translate Name=AppName}" VerticalOptions="Center" FontAttributes="Bold" FontSize="32" HorizontalOptions="Center" Margin="0,-20,0,0"/>
+                <Image
+                    HorizontalOptions="Center"
+                    Source="app_icon.png"
+                    VerticalOptions="Center"
+                    WidthRequest="150" />
+                <Label
+                    Margin="0,-20,0,0"
+                    FontAttributes="Bold"
+                    FontSize="32"
+                    HorizontalOptions="Center"
+                    Text="{stringResource:Translate Name=AppName}"
+                    VerticalOptions="Center" />
             </VerticalStackLayout>
         </VerticalStackLayout>
 
-        <Border Grid.Row="2" Grid.RowSpan="3" StrokeShape="RoundRectangle 40,40,0,0" Stroke="Black" Background="{DynamicResource Primary}" Padding="20">
+        <Border
+            Grid.Row="2"
+            Grid.RowSpan="3"
+            Padding="20"
+            Background="{DynamicResource Primary}"
+            Stroke="Black"
+            StrokeShape="RoundRectangle 40,40,0,0">
             <Grid RowDefinitions="*,*,*,*">
-                <Label Grid.Row="0" Text="{stringResource:Translate Name=WelcomeText}" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" FontSize="30"/>
+                <Label
+                    Grid.Row="0"
+                    FontAttributes="Bold"
+                    FontSize="30"
+                    HorizontalOptions="Center"
+                    Text="{stringResource:Translate Name=WelcomeText}"
+                    VerticalOptions="Center" />
 
                 <VerticalStackLayout Grid.Row="1" Spacing="5">
-                    <material:TextField Text="{Binding Username}" 
-                                        TextColor="{StaticResource Black}"
-                                        x:Name="username"
-                                        Title="{stringResource:Translate Name=UsernameText}" 
-                                        Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.User}}"
-                                        AccentColor="Black"
-                                        SelectionHighlightColor="Orange"
-                                        InputBackgroundColor="{x:DynamicResource White}" 
-                                        BorderThickness="1"
-                                        Grid.Row="0"
-                                    />
-
-                    <material:TextField Text="{Binding Password}" IsPassword="True"
-                        TextColor="{StaticResource Black}"
-                        x:Name="password"
-                        Title="{stringResource:Translate Name=PasswordText}" 
-                        Icon="{FontImageSource FontFamily=FASolid, Glyph={x:Static fa:Solid.Lock}}"
+                    <material:TextField
+                        x:Name="username"
+                        Title="{stringResource:Translate Name=UsernameText}"
+                        Grid.Row="0"
                         AccentColor="Black"
-                        SelectionHighlightColor="Orange"
-                        InputBackgroundColor="{x:DynamicResource White}" 
                         BorderThickness="1"
-                        Grid.Row="0">
+                        Icon="{FontImageSource FontFamily=FASolid,
+                                               Glyph={x:Static fa:Solid.User}}"
+                        InputBackgroundColor="{x:DynamicResource White}"
+                        SelectionHighlightColor="Orange"
+                        Text="{Binding Username}"
+                        TextColor="{StaticResource Black}" />
+
+                    <material:TextField
+                        x:Name="password"
+                        Title="{stringResource:Translate Name=PasswordText}"
+                        Grid.Row="0"
+                        AccentColor="Black"
+                        BorderThickness="1"
+                        Icon="{FontImageSource FontFamily=FASolid,
+                                               Glyph={x:Static fa:Solid.Lock}}"
+                        InputBackgroundColor="{x:DynamicResource White}"
+                        IsPassword="True"
+                        SelectionHighlightColor="Orange"
+                        Text="{Binding Password}"
+                        TextColor="{StaticResource Black}">
                         <material:TextField.Attachments>
                             <material:TextFieldPasswordShowHideAttachment />
                         </material:TextField.Attachments>
                     </material:TextField>
                 </VerticalStackLayout>
-                
-                <VerticalStackLayout Grid.Row="2" Spacing="15" Margin="0,15,0,0">
+
+                <VerticalStackLayout
+                    Grid.Row="2"
+                    Margin="0,15,0,0"
+                    Spacing="15">
                     <HorizontalStackLayout>
-                        <material:CheckBox 
-                            Color="{DynamicResource Black}" 
-                            Margin="0,0,-10,0" 
-                            BoxSizeRequest="20" 
-                            Text="{stringResource:Translate Name=StayLoggedIn}"
+                        <material:CheckBox
+                            Margin="0,0,-10,0"
+                            BoxSizeRequest="20"
                             ColumnSpacing="5"
                             IsChecked="{Binding IsReminding}"
-                            />
+                            Text="{stringResource:Translate Name=StayLoggedIn}"
+                            Color="{DynamicResource Black}" />
                     </HorizontalStackLayout>
 
-                    <Button Text="{stringResource:Translate Name=LogInText}" Background="{DynamicResource Black}" FontAttributes="Bold" Command="{Binding LoginCommand}"/>
+                    <Button
+                        Background="{DynamicResource Black}"
+                        Command="{Binding LoginCommand}"
+                        FontAttributes="Bold"
+                        Text="{stringResource:Translate Name=LogInText}" />
                 </VerticalStackLayout>
 
-                <VerticalStackLayout Grid.Row="3" VerticalOptions="End" HorizontalOptions="Center" Margin="0,0,10,0">
-                    <Label Text="{stringResource:Translate Name=CopyrightText}" HorizontalOptions="Center" FontSize="12"/>
-                    <Label Text="{stringResource:Translate Name=WebPage}" HorizontalOptions="Center" FontSize="12"/>
+                <VerticalStackLayout
+                    Grid.Row="3"
+                    Margin="0,0,10,0"
+                    HorizontalOptions="Center"
+                    VerticalOptions="End">
+                    <Label
+                        FontSize="12"
+                        HorizontalOptions="Center"
+                        Text="{stringResource:Translate Name=CopyrightText}" />
+                    <Label
+                        FontSize="12"
+                        HorizontalOptions="Center"
+                        Text="{stringResource:Translate Name=WebPage}" />
                 </VerticalStackLayout>
-                
+
             </Grid>
         </Border>
-        
+
     </Grid>
 </ContentPage>
